--- a/front-farmacia/src/pages/equipos/EquiposList.css
+++ b/front-farmacia/src/pages/equipos/EquiposList.css
@@ -11,6 +11,9 @@
     gap: 20px;
     margin-top: 20px;
   }
+  .icon-space {
+    font-size: 20px; /* Tamaño del icono */
+  }
   
   /* Botón de agregar equipo */
   .add-equipo-btn {
@@ -19,6 +22,7 @@
     justify-content: center;
     background-color: var(--primary-color);
     color: #fff;
+    gap: 10px;
     border: none;
     padding: 12px 18px;
     font-size: 16px;
