--- a/front-farmacia/src/pages/trabajos/Taskboardtask.css
+++ b/front-farmacia/src/pages/trabajos/Taskboardtask.css
@@ -55,3 +55,36 @@
   border-radius: 4px;
   margin-top: 5px;
 }
+
+
+.icon-button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 20px;
+  /* gap:15px; */
+  /* fill: currentColor; */
+  transition: transform 0.2s;
+}
+.icon-button:hover {
+  transform: scale(1.2);
+}
+.column-title {
+  font-size: 16px;
+  flex-grow: 1; 
+}
+.column-buttons {
+  display: flex;
+  gap: 10px; 
+  /* justify-content: flex-end;  */
+}
+.column-header {
+  padding-block: calc(var(--kendo-spacing-4, 1rem) / 2);
+  padding-inline: calc(var(--kendo-spacing-4, 1rem) / 2);
+  font-weight: 500;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between; /* Asegura que los botones estén a la derecha */
+  gap: calc(var(--kendo-spacing-4, 1rem) / 4);
+}
