--- a/front-farmacia/src/components/table/EquiposList.css
+++ b/front-farmacia/src/components/table/EquiposList.css
@@ -144,3 +144,18 @@
   .rows-per-page select {
     padding: 5px;
   }
+
+
+  .search-bar {
+    margin: 1rem 0;
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .search-input {
+    padding: 0.5rem 1rem;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+  }
+  
