--- a/front-farmacia/src/pages/cronograma/CalendarioMantenimientos.css
+++ b/front-farmacia/src/pages/cronograma/CalendarioMantenimientos.css
@@ -42,8 +42,6 @@
   background: white;
   padding: 2rem;
   border-radius: 8px;
-  max-width: 500px;
-  width: 90%;
   max-height: 80vh;
   overflow-y: auto;
   position: relative;
@@ -69,6 +67,7 @@
   background: white;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  height: 80% !important;
 }
 
 .rbc-event {
